add contracts to REST endpoints and refactor UK validation (#11)
* add contracts to REST endpoints and refactor UK validation

* adjust collection

---------

Co-authored-by: Lucas Bruner <lucas-bruner@hotmai.com.br>